# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.134 2010-05-24 07:56:27 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.8 (2010/??/??)
 - (2010/05/24) Fixed bug#5383 - Fckeditor localization not working for some
    languages such as Brazilian Portuguese.
 - (2010/05/07) Fixed bug#5336 - Also set execute bit on scripts/tools.
 - (2010/04/21) Fixed bug#5266 - Ticket Zoom shows wrong html content if there
    is no text but two html attachments in there.
 - (2010/04/15) Fixed bug#5242 - Newlines are not displayed in html notification
    mails on Lotus Notes
 - (2010/04/14) Fixed bug#4999 - Cache for customer user is not refreshed when
    a preference is updated.
 - (2010/04/13) Fixed bug#5152 - responsible_user_id in ticket table is wrong in
    otrs-database.dia.
 - (2010/04/12) Fixed bug#5108 - The RSS date was not displayed correctly.
 - (2010/04/12) Fixed bug#5112 - Redirecting to a valid screen after unsubscribing
    from a ticket where the agent does not have permissions on the queue.
 - (2010/04/06) Fixed bug#4986 - There is no activate/deactivate check for
    Graphsize menu when the page loads in Stats Definition
 - (2010/04/01) Fixed bug#4786 - AgentTicketCompose ONLY: Defining a next state,
    then adding and attachment, resets the next state upon screen refresh.
 - (2010/03/29) Improved handling of the StateType attribute of
    StateGetStatesByType() in Kernel/System/State.pm.
 - (2010/03/24) Fixed bug#5164 - Pending time not working if agent as an other
    timezone.
 - (2010/03/19) Fixed bug#5094 - Bulk pending date/time do not get applied to
    tickets.
 - (2010/03/18) Updated Ukrainian language translation, thanks to Belskii Artem!