@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.134 2010-05-24 07:56:27 mb Exp $
+# $Id: CHANGES,v 1.993.2.135 2010-05-25 18:16:40 dz Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.8 (2010/??/??)
+ - (2010/05/25) Fixed bug#5397 - Response not converted to Ascii when Rich Text Editor disabled.
  - (2010/05/24) Fixed bug#5383 - Fckeditor localization not working for some
     languages such as Brazilian Portuguese.
  - (2010/05/07) Fixed bug#5336 - Also set execute bit on scripts/tools.
